# spa_habit_drf

./: .env.sample  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
habit/: models.py  permissions.py  serializers.py  servises.py  tasks.py  tests.py  urls.py  validators.py  views.py
habit/migrations/: 0001_initial.py  0002_alter_habit_owner_alter_habit_period.py  0003_habit_last_time.py  0004_alter_habit_last_time.py  0005_alter_habit_last_time.py  0006_alter_habit_options_alter_habit_last_time.py  0007_alter_habit_last_time.py  0008_alter_habit_last_time.py  0009_alter_habit_last_time.py
users/: models.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_tg_username.py
